--- a/bookers2/app/views/books/index.html.erb
+++ b/bookers2/app/views/books/index.html.erb
@@ -20,46 +20,53 @@
           <% end %>
         </ul>
     <% end %>
-
-    <%# 共通部分　↓　%>
-    <%#　プロフィール編集　%>
-    <h2>User Info</h2>
-    <%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-    <p>name<%= current_user.name %></p>
-    <p>introduction<%= current_user.introduction %></p>
-    <button><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog"></i></a></button>
-    <%# 新規投稿 %>
-    <div>
-      <%= form_with model: @book, local:true do |f| %>
-        <h2>New Book</h2>
-        <h4>title</h4>
-        <%= f.text_field :title %>
-        <h4>opinion</h4>
-        <%= f.text_area :body %>
-      <p><%= f.submit 'Create Book' %></p>
-      <% end %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-1 w-100">
+        </div>
+        <div class="col-md-3 w-75">
+          <%# 共通部分　↓　%>
+          <%#　プロフィール編集　%>
+          <h2>User Info</h2>
+          <%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
+          <p class="border-top border-bottom w-75">name<%= current_user.name %></p>
+          <p>introduction<%= current_user.introduction %></p>
+          <button class="w-75 bg-light"><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog text-secondary"></i></a></button>
+          <%# 新規投稿 %>
+          <%= form_with model: @book, local:true do |f| %>
+            <h4>New Book</h4>
+            <p>title</p>
+            <%= f.text_field :title %>
+            <p>opinion</p>
+            <%= f.text_area :body %>
+            <p><%= f.submit 'Create Book', class:"bg-success text-light"%></p>
+          <% end %>
+        </div>
+        <%# 共通部分　↑ %>
+        <div class="col-md-8">
+        <%# 投稿一覧 %>
+          <h2>Books</h2>
+          <table class="w-100">
+            <thead>
+              <tr class="border-top">
+                <th colspan="1"></th>
+                <th>Title</th>
+                <th>Opinion</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @books.each do |book| %>
+                <tr class="border-top">
+                  <td><%= attachment_image_tag book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+                  <td><%= link_to "#{book.title}",book_path(book) %></td>
+                  <td><%= book.body %></td>
+                </tr>
+             <% end %>
+           </tbody>
+         </table>
+        </div>
+      </div>
     </div>
-    <%# 共通部分　↑ %>
-
-    <%# 投稿一覧 %>
-    <h2>Books</h2>
-    <table>
-      <thead>
-        <tr>
-          <th colspan="1"></th>
-          <th>title</th>
-          <th>opinion</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @books.each do |book| %>
-        <tr>
-          <td><%= attachment_image_tag book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
-          <td><%= link_to "#{book.title}",book_path(book) %></td>
-          <td><%= book.body %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <p class= 'text-center pt-5'> CopyRight Infratop.inc</p>
   </body>
 </html>
