--- a/bookers2/app/views/homes/about.html.erb
+++ b/bookers2/app/views/homes/about.html.erb
@@ -1,3 +1,6 @@
-<h2>Welcome to Bookers!</h2>
+<html>
+  <body>
+    <h2 class= 'text-center'> Welcome to<i class="fas fa-book"></i>Bookers!</h2>
+    <p class= 'text-center pt-5'> CopyRight Infratop.inc</p>
+  </body>
 
-<p>CopyRight Infratop.inc</p>
