--- a/bookers2/app/views/books/edit.html.erb
+++ b/bookers2/app/views/books/edit.html.erb
@@ -1,11 +1,24 @@
-
-<h2>Editing book</h2>
-
-<%=form_with model:@book,local:true do |f|%>
-  <p>title</p>
-  <%= f.text_field :title %>
-  <p>opinion</p>
-  <%= f.text_field :body %>
-  <p><%= f.submit 'Update Book' %></p>
-<% end %>
-<%= link_to"show",book_path(@book) %>|<%= link_to"back",books_path %>
+<html>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 w-100">
+        </div>
+        <div class="col-md-4 w-100">
+          <h2>Editing book</h2>
+          <%=form_with model:@book,local:true do |f|%>
+            <p>title</p>
+            <%= f.text_field :title,clas:"w-100" %>
+            <p>opinion</p>
+            <%= f.text_field :body,clas:"w-100" %>
+            <p><%= f.submit 'Update Book' %></p>
+          <% end %>
+          <%= link_to"show",book_path(@book) %>|<%= link_to"back",books_path %>
+          <p>CopyRight Infratop.inc</p>
+        </div>
+        <div class="col-md-4 w-100">
+        </div>
+      </div>
+    </div>
+  </div>
+</html>
