--- a/bookers2/app/views/homes/top.html.erb
+++ b/bookers2/app/views/homes/top.html.erb
@@ -6,12 +6,15 @@
     <% if notice %>
     <p><%= notice %></p>
     <% end %>
-    <h1>welcome to <i class="fas fa-book"></i>Bookers !!</h1>
-    <p>In<i class="fas fa-book"></i> <steong>Bookers</strong>,</br>
-    you can share and exchange your opinions , inpressions , and emotions</br>
-    about various books!</p>
-    <p><button><%= link_to "Log in", new_user_session_path %></button></p>
-    <p><button><%= link_to "Sign up",new_user_registration_path %></button></p>
-    <p>CopyRight Infratop.inc</p>
+    <div class="mx-auto" style="width: 550px;" >
+      <h2>welcome to <i class="fas fa-book"></i>Bookers !!</h2>
+      <p >In<i class="fas fa-book"></i> <steong>Bookers</strong>,</br>
+      <br>you can share and exchange your opinions , inpressions , and emotions</br>
+      <br>about various books!</br></p>
+
+      <p><%= link_to "Log in", new_user_session_path, class: 'w-75 nav-link bg-info text-light text-center '  %></p>
+      <p><%= link_to "Sign up",new_user_registration_path, class: 'w-75 nav-link bg-success text-light text-center  ' %></p>
+      <p class= 'text-center pt-5'> CopyRight Infratop.inc</p>
+    </div>
   </body>
 </html>
