--- a/bookers2/app/views/users/show.html.erb
+++ b/bookers2/app/views/users/show.html.erb
@@ -1,60 +1,58 @@
 <html>
   <body>
+    <div class="message">
+      <%#　ログイン・新規登録　サクセスメッセージ　%>
+      <% if notice %>
+        <p><%= notice %></p>
+      <% end %>
+      <%# 　プロフィール更新　バリデーションチェック　エラー　%>
+      <% if @user.errors.any? %>
+        <%= pluralize(@user.errors.count, "error") %> prohibited this product from being saved:</p>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      <%# プロフィール編集サクセスメッセージ・エラーメッセージ %>
+      <% if flash[:success] %>
+        <%= flash[:success] %>
+      <% end %>
+      <% if flash[:danger] %>
+        <%= flash[:danger] %>
+      <% end %>
+    </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-1 w-100">
-        </div>
         <div class="col-md-3 w-100">
-          <%# 　プロフィール更新　バリデーションチェック　エラー　%>
-          <% if @user.errors.any? %>
-            <%= pluralize(@user.errors.count, "error") %> prohibited this product from being saved:</p>
-              <ul>
-                <% @user.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-                <% end %>
-              </ul>
-          <% end %>
-          <%# プロフィール編集サクセスメッセージ・エラーメッセージ %>
-          <% if flash[:success] %>
-            <%= flash[:success] %>
-          <% end %>
-          <% if flash[:danger] %>
-            <%= flash[:danger] %>
-          <% end %>
-
-          <%# 共通部分　↓　%>
           <%#　プロフィール編集　%>
           <h2>User Info</h2>
           <%= attachment_image_tag @user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-          <p class="w-75 border-top border-bottom">name<%= @user.name %></p>
-          <p class="w-75">introduction<%= @user.introduction %></p>
-            <% if @user.id == current_user.id %>
-              <button class="w-75 bg-light"><a href=/users/<%= current_user.id %>/edit"><i class="fas fa-user-cog text-secondary"></i></a></button>
-            <% end %>
+          <p class=" border-top border-bottom mt-2  pt-2 pb-2">name<%= @user.name %></p>
+          <p class=>introduction<%= @user.introduction %></p>
+          <button class="w-100 bg-white rounded border border-secondary"><a href=/users/<%= @user.id %>/edit><i class="fas fa-user-cog text-secondary"></i></a></button>
           <%# 新規投稿 %>
           <%= form_with model: @new_book, local:true do |f| %>
-            <h4>New Book</h4>
-            <p>title</p>
-            <%= f.text_field :title %>
-            <p>opinion</p>
-            <%= f.text_area :body %>
-            <p><%= f.submit 'Create Book', class:"bg-success text-light"%></p>
+            <h4 class=pt-3>New book</h4>
+            <p>Title</p>
+            <%= f.text_field :title , class:"w-100 border border-muted" %>
+            <p class=pt-3>Opinion</p>
+            <%= f.text_area :body , class:"w-100 border border-muted" %>
+            <p><%= f.submit 'Create Book', class:"bg-success text-light mt-3 pt-1 pb-1 rounded border-0 "%></p>
           <% end %>
         </div>
-        <%# 共通部分　↑ %>
-
         <%# 投稿一覧 %>
-        <div class="col-md-8">
+        <div class="col-md-8 offset-md-1 w-100">
           <h2>Books</h2>
           <table class="w-100">
-            <tr class="border-top border-bottom ">
+            <tr class="border-top border-bottom pb-3 ">
               <th colspan="1"></th>
-              <th>title</th>
-              <th>opinion</th>
+              <th class="pt-2 pb-2">Title</th>
+              <th>Opinion</th>
             </tr>
           <% @books.each do |book|%>
-            <tr>
-              <td><%= attachment_image_tag @user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+            <tr class="border-bottom">
+              <td><a href=/users/<%= book.user_id %>><%= attachment_image_tag @user, :profile_image,size: "60x60",fallback:"no_image.jpg" ,class:"mt-3 mb-3"%></a></td>
               <td><%= link_to "#{book.title}",book_path(book) %></td>
               <td><%= book.body %></td>
             </tr>
