--- a/bookers2/app/views/books/index.html.erb
+++ b/bookers2/app/views/books/index.html.erb
@@ -22,42 +22,40 @@
     <% end %>
     <div class="container">
       <div class="row">
-        <div class="col-md-1 w-100">
-        </div>
-        <div class="col-md-3 w-75">
+        <div class="col-md-3 w-100">
           <%# 共通部分　↓　%>
           <%#　プロフィール編集　%>
           <h2>User Info</h2>
           <%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-          <p class="border-top border-bottom w-75">name<%= current_user.name %></p>
+          <p class="border-top border-bottom mt-2  pt-2 pb-2">name<%= current_user.name %></p>
           <p>introduction<%= current_user.introduction %></p>
-          <button class="w-75 bg-light"><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog text-secondary"></i></a></button>
+          <button class=" bg-white rounded border border-secondary w-100"><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog text-secondary"></i></a></button>
           <%# 新規投稿 %>
           <%= form_with model: @book, local:true do |f| %>
-            <h4>New Book</h4>
-            <p>title</p>
-            <%= f.text_field :title %>
-            <p>opinion</p>
-            <%= f.text_area :body %>
-            <p><%= f.submit 'Create Book', class:"bg-success text-light"%></p>
+            <h4 class=pt-3>New book</h4>
+            <p>Title</p>
+            <%= f.text_field :title ,class:"w-100 border border-muted" %>
+            <p class=pt-3>Opinion</p>
+            <%= f.text_area :body ,class:"w-100 border border-muted" %>
+            <p><%= f.submit 'Create Book', class:"bg-success text-light mt-3 pt-1 pb-1 rounded border-0 "%></p>
           <% end %>
         </div>
         <%# 共通部分　↑ %>
-        <div class="col-md-8">
+        <div class="col-md-8 offset-md-1 w-100">
         <%# 投稿一覧 %>
           <h2>Books</h2>
           <table class="w-100">
             <thead>
               <tr class="border-top">
                 <th colspan="1"></th>
-                <th>Title</th>
+                <th class="pt-2 pb-2">Title</th>
                 <th>Opinion</th>
               </tr>
             </thead>
             <tbody>
               <% @books.each do |book| %>
                 <tr class="border-top">
-                  <td><%= attachment_image_tag book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+                  <td><a href=/users/<%= book.user_id %>><%= attachment_image_tag book.user, :profile_image,size: "60x60",fallback:"no_image.jpg",class:"mt-3 mb-3"%></a></td>
                   <td><%= link_to "#{book.title}",book_path(book) %></td>
                   <td><%= book.body %></td>
                 </tr>
