--- a/bookers2/app/views/books/show.html.erb
+++ b/bookers2/app/views/books/show.html.erb
@@ -15,40 +15,37 @@
     <% end %>
     <div class="container">
       <div class="row">
-        <div class="col-md-1 w-100">
-        </div>
         <div class="col-md-3 w-100">
           <%#　プロフィール画面 %>
           <h2>User Info</h2>
           <%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
-          <p class="w-75 border-top border-bottom">name<%= @book.user.name %></p>
+          <p  class="border-top border-bottom mt-2  pt-2 pb-2">name<%= @book.user.name %></p>
           <p>introduction<%= @book.user.introduction %></p>
-          <% if @book.user.id == current_user.id %>
-            <button class="w-75 bg-light"><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog text-secondary"></i></a></button>
-          <% end %>
+          <button class=" bg-white rounded border border-secondary w-100"><a href=/users/<%= @book.user_id %>/edit><i class="fas fa-user-cog text-secondary"></i></a></button>
           <%# 新規投稿 %>
           <%= form_with model: @new_book, local:true do |f| %>
-            <h4>New Book</h4>
+            <h4 class=pt-3>New book</h4>
             <p>title</p>
-            <%= f.text_field :title %>
+            <%= f.text_field :title ,class:"w-100 border border-muted" %>
             <p>opinion</p>
-            <%= f.text_area :body %>
-            <p><%= f.submit 'Create Book', class:"bg-success text-light"%></p>
+            <%= f.text_area :body ,class:"w-100 border border-muted" %>
+            <p><%= f.submit 'Create Book', class:"bg-success text-light mt-3 pt-1 pb-1 rounded border-0 "%></p>
           <% end %>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 offset-md-1 w-100">
           <%# 詳細画面 %>
           <h2>Book detail</h2>
-            <div class="border-top">
-              <%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
-              <%= link_to "#{@book.user.name}",user_path(@book.user) %>
-              <%= link_to "#{@book.title}",book_path(@book.id) %>
-              <%= @book.body %>
+            <table class="border-top w-100">
+              <tr>
+                <td><%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg" ,class:"mt-3"%><br><%= link_to "#{@book.user.name}",user_path(@book.user) %></br></td>
+                <td><%= link_to "#{@book.title}",book_path(@book.id) %></td>
+                <td> <%= @book.body %><td>
               <% if @book.user_id == current_user.id %>
-              <button class="bg-success"><%= link_to "Edit",edit_book_path(@book),class:" text-white" %></button>
-              <button class="bg-danger"><%= link_to "Destroy",book_path(@book),method: :delete,"data-confirm"=>"本当に消しますか",class:" text-white"%></button>
+                <td><button class="bg-success border-0 rounded"><%= link_to "Edit",edit_book_path(@book),class:" text-white" %></button></td>
+                <td><button class="bg-danger border-0 rounded"><%= link_to "Destroy",book_path(@book),method: :delete,"data-confirm"=>"本当に消しますか",class:" text-white"%></button></td>
               <% end %>
-            </div>
+              </tr>
+            </table>
         </div>
       </div>
     </div>
