--- a/bookers2/app/views/devise/registrations/new.html.erb
+++ b/bookers2/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" , class: 'text-white bg-success mt-3'%>
+      <%= f.submit "Sign up" , class: 'text-white bg-success mt-3 border-0 rounded pt-1 pb-1'%>
     </div>
   <% end %>
   <%= render "devise/shared/links" %>
