--- a/bookers2/app/views/layouts/application.html.erb
+++ b/bookers2/app/views/layouts/application.html.erb
@@ -10,24 +10,27 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand mx-auto" style="width: 400px;" href="/">Bookers</a>
+        <a class="navbar-brand mx-auto" style="width: 350px;height: 50px;" href="/">Bookers</a>
 
         <%#　ログイン時　%>
         <% if user_signed_in? %>
           <ul type="none" class="list-inlin mx-auto " style="width: 400px;" >
-            <li class="list-inline-item">
+            <li class="list-inline-item align-middle">
               <a href=/users/<%= current_user.id %>><i class='fas fa-home text-light'>Home</i></a>
             </li>
-            <li  class="list-inline-item">
+            <li  class="list-inline-item align-middle">
               <a href=/users><i class="fas fa-users text-light">Users</i></a>
-            <li  class="list-inline-item">
+            <li  class="list-inline-item align-middle">
               <a href=/books ><i class="fas fa-book-open text-light">Books</i></a>
             </li>
-            <li  class="list-inline-item">
-              <%= link_to "logout",destroy_user_session_path, method: :delete%>
-            <%#　処理手順がわからない %>
+
+            <li  class="list-inline-item align-middle">
+              <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fas fa-sign-out-alt text-light">logout</i>
+              <% end %>
             </li>
           </ul>
+        <%# ログアウト　アイコン>  <i class="fas fa-sign-out-alt"></i>
         <%#　ログアウト時　%>
         <% else %>
           <ul type="none" class="list-inlin mx-auto " style="width: 400px;" >
@@ -41,7 +44,7 @@
               <a href=/users/sign_up><i class="fas fa-user-plus text-light">sign up</i></a>
             </li>
             <li  class="list-inline-item">
-              <a href=/users/sign_in><i class="fas fa-sign-in-alt text-light"></i> login</i></a>
+              <a href=/users/sign_in><i class="fas fa-sign-in-alt text-light"> login</i></a>
             </li>
           </ul>
         <% end %>
