--- a/bookers2/app/views/users/edit.html.erb
+++ b/bookers2/app/views/users/edit.html.erb
@@ -1,18 +1,34 @@
 <html>
   <body>
+    <%# 　プロフィール更新　バリデーションチェック　エラー　%>
+    <div class="message">
+      <% if @user.errors.any? %>
+        <%= pluralize(@user.errors.count, "error") %> prohibited this product from being saved:</p>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+      <% end %>
+      <%# プロフィール編集サクセスメッセージ・エラーメッセージ %>
+      <% if flash[:success] %>
+        <%= flash[:success] %>
+      <% end %>
+      <% if flash[:danger] %>
+        <%= flash[:danger] %>
+      <% end %>
+    </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 w-100">
-        </div>
-        <div class="col-md-4 w-100">
+        <div class="col-md-4 offset-md-4 w-100">
           <h2>User info</h2>
           <%= form_with model:@user, local:true do |f| %>
-            <p>Name</p><%= f.text_field :name %>
-            <p>image</p><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-            <p>introduction</p><%= f.text_area :introduction %>
-            <p><%= f.submit "Update User" %></p>
+            <p>Name</p><%= f.text_field :name ,class:"w-100 mb-2 border border-muted rounded" %>
+            <p>image</p><%= f.attachment_field :profile_image, placeholder: "プロフィール画像",class:"rounded mb-2 " %>
+            <p>introduction</p><%= f.text_area :introduction ,class:"w-100 border border-muted rounded"%>
+            <p><%= f.submit "Update User",class:"bg-secondary border border-secondary text-white rounded mt-2 pt-1 pb-1" %></p>
           <% end %>
-          <p>CopyRight Infratop.inc</p>
+          <p class="text-center pt-5">CopyRight Infratop.inc</p>
          </div>
        <div class="col-md-4 w-100">
        </div>
